syntax = "proto3";

option java_multiple_files = false;
option java_package = "kr.ac.dankook";

service DashboardService {
  rpc SendTraceInfo (stream DashboardRequest) returns (DashboardResponse);
}

message DashboardRequest {
  string service_name = 1;
  int64 timestamp = 2;
  string method = 3;
  int64 status = 4;
  string message = 5;
}

message DashboardResponse {
  int64 status = 1;
  string message = 2;
}